/*
 * $Id: ChangeLog,v 1.1887 2003/12/17 03:53:16 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-17 15:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed compilation of <> in #directives.

  * source/rtl/console.c
    + Added OutputDebugString() in hb_conOutErr() if under Windows.

  * source/vm/estack.c
    * Minor formatting.

2003-12-16 19:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/genc.c
  * source/compiler/harbour.c
    ! Fixed INIT/EXIT Procedures to be more Clipper compatible
      Don't conflict with other symbols of same name, and use $ as suffix like in Clipper.

2003-12-16 12:15 UTC+1200 Peter Rees <peter@rees.co.nz>
  * source/vm/mainwin.c
    *fixed to make sure terminating '\0' is on final parameter

2003-12-15 14:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  + source/codepage/CDPHR1250.C
  + source/codepage/CDPHR852.C
  + source/lang/MSGHR1250.C
    + Added new files contributed by Vladimir Miholic [mailto:Vladimir.Miholic@sk.hinet.hr]

  * source/lang/msghr852.c
    Update contributed by Vladimir Miholic [mailto:Vladimir.Miholic@sk.hinet.hr]

  * hrbdll.bc
  * makefile.bc
    + Added support for new hr1250 language and hr852 and hr1250 codepage files.

2003-12-16 08:43 UTC+1200 Peter Rees <peter@rees.co.nz>
  *  restored 4 changelog entries below

2003-12-15 15:24 UTC+1200 Peter Rees <peter@rees.co.nz>
  * source/vm/mainwin.c
    *added LocalFree( pArgs ) after hb_vmQuit() to. Ok on Win9X now.

2003-12-15 15:24 UTC+1200 Peter Rees <peter@rees.co.nz>
  * source/vm/mainwin.c
    *remove LocalFree( pArgs ) as causes problem with Win9X

2003-12-15 11:41 UTC+1200 Peter Rees <peter@rees.co.nz>
  * source/vm/mainwin.c
    *fix last change for exception if only parameter is "
       e.g. test "
